@@ -14,7 +14,7 @@
 #define CYGMEM_REGION_sram_SIZE (0x9c00)
 #define CYGMEM_REGION_sram_ATTR (CYGMEM_REGION_ATTR_R | CYGMEM_REGION_ATTR_W)
 #define CYGMEM_REGION_rom (0xe0000000)
-#define CYGMEM_REGION_rom_SIZE (0x800000)
+#define CYGMEM_REGION_rom_SIZE (0x1000000)
 #define CYGMEM_REGION_rom_ATTR (CYGMEM_REGION_ATTR_R)
 #ifndef __ASSEMBLER__
 extern char CYG_LABEL_NAME (__heap1) [];
