@@ -8,7 +8,7 @@ MEMORY
 {
     ram : ORIGIN = 0, LENGTH = 0xfd7000
     sram : ORIGIN = 0x60000000, LENGTH = 0x9c00
-    rom : ORIGIN = 0xe0000000, LENGTH = 0x800000
+    rom : ORIGIN = 0xe0000000, LENGTH = 0x1000000
 }
 
 SECTIONS
